crates/ruff_linter/src/rules/flake8_pyi/snapshots/ruff_linter__rules__flake8_pyi__tests__PYI012_PYI012.pyi.snap
---
source: crates/ruff_linter/src/rules/flake8_pyi/mod.rs
---
PYI012 [*] Class body must not contain `pass`
 --> PYI012.pyi:5:5
  |
3 | class OneAttributeClass:
4 |     value: int
5 |     pass  # PYI012 Class body must not contain `pass`
  |     ^^^^
6 |
7 | class OneAttributeClassRev:
help: Remove unnecessary `pass`
  |
4 |     value: int
  -     pass  # PYI012 Class body must not contain `pass`
5 |
  |

PYI012 [*] Class body must not contain `pass`
 --> PYI012.pyi:8:5
  |
7 | class OneAttributeClassRev:
8 |     pass  # PYI012 Class body must not contain `pass`
  |     ^^^^
9 |     value: int
help: Remove unnecessary `pass`
  |
7 | class OneAttributeClassRev:
  -     pass  # PYI012 Class body must not contain `pass`
8 |     value: int
  |

PYI012 [*] Class body must not contain `pass`
  --> PYI012.pyi:16:5
   |
14 |     """
15 |
16 |     pass  # PYI012 Class body must not contain `pass`
   |     ^^^^
17 |
18 | class NonEmptyChild(Exception):
help: Remove unnecessary `pass`
   |
15 |
   -     pass  # PYI012 Class body must not contain `pass`
16 |
   |

PYI012 [*] Class body must not contain `pass`
  --> PYI012.pyi:20:5
   |
18 | class NonEmptyChild(Exception):
19 |     value: int
20 |     pass  # PYI012 Class body must not contain `pass`
   |     ^^^^
21 |
22 | class NonEmptyChild2(Exception):
help: Remove unnecessary `pass`
   |
19 |     value: int
   -     pass  # PYI012 Class body must not contain `pass`
20 |
   |

PYI012 [*] Class body must not contain `pass`
  --> PYI012.pyi:23:5
   |
22 | class NonEmptyChild2(Exception):
23 |     pass  # PYI012 Class body must not contain `pass`
   |     ^^^^
24 |     value: int
help: Remove unnecessary `pass`
   |
22 | class NonEmptyChild2(Exception):
   -     pass  # PYI012 Class body must not contain `pass`
23 |     value: int
   |

PYI012 [*] Class body must not contain `pass`
  --> PYI012.pyi:28:5
   |
26 | class NonEmptyWithInit:
27 |     value: int
28 |     pass  # PYI012 Class body must not contain `pass`
   |     ^^^^
29 |
30 |     def __init__():
help: Remove unnecessary `pass`
   |
27 |     value: int
   -     pass  # PYI012 Class body must not contain `pass`
28 |
   |
