crates/ruff_linter/src/rules/flake8_pyi/snapshots/ruff_linter__rules__flake8_pyi__tests__PYI013_PYI013.py.snap
---
source: crates/ruff_linter/src/rules/flake8_pyi/mod.rs
---
PYI013 [*] Non-empty class body must not contain `...`
 --> PYI013.py:3:5
1 | class OneAttributeClass:
2 |     value: int
3 |     ...
  |     ^^^
help: Remove unnecessary `...`
  |
2 |     value: int
  -     ...
3 |
  |

PYI013 [*] Non-empty class body must not contain `...`
 --> PYI013.py:7:5
  |
6 | class OneAttributeClass2:
7 |     ...
  |     ^^^
8 |     value: int
help: Remove unnecessary `...`
  |
6 | class OneAttributeClass2:
  -     ...
7 |     value: int
  |

PYI013 [*] Non-empty class body must not contain `...`
  --> PYI013.py:12:5
   |
11 | class TwoEllipsesClass:
12 |     ...
   |     ^^^
13 |     ...
help: Remove unnecessary `...`
12 |     ...
   -     ...
13 |

PYI013 [*] Non-empty class body must not contain `...`
  --> PYI013.py:13:5
   |
11 | class TwoEllipsesClass:
12 |     ...
13 |     ...
   |     ^^^
help: Remove unnecessary `...`
12 |     ...
   -     ...
13 |
   |

PYI013 [*] Non-empty class body must not contain `...`
  --> PYI013.py:21:5
   |
19 |     """
20 |
21 |     ...
   |     ^^^
help: Remove unnecessary `...`
20 |
   -     ...
21 |
   |

PYI013 [*] Non-empty class body must not contain `...`
  --> PYI013.py:26:5
   |
24 | class NonEmptyChild(Exception):
25 |     value: int
26 |     ...
   |     ^^^
help: Remove unnecessary `...`
   |
25 |     value: int
   -     ...
26 |
   |

PYI013 [*] Non-empty class body must not contain `...`
  --> PYI013.py:30:5
   |
29 | class NonEmptyChild2(Exception):
30 |     ...
   |     ^^^
31 |     value: int
help: Remove unnecessary `...`
   |
29 | class NonEmptyChild2(Exception):
   -     ...
30 |     value: int

PYI013 [*] Non-empty class body must not contain `...`
  --> PYI013.py:36:5
34 | class NonEmptyWithInit:
35 |     value: int
36 |     ...
   |     ^^^
37 |
38 |     def __init__():
help: Remove unnecessary `...`
   |
35 |     value: int
   -     ...
36 |
   |

PYI013 [*] Non-empty class body must not contain `...`
  --> PYI013.py:44:5
   |
42 | class NonEmptyChildWithInlineComment:
43 |     value: int
44 |     ... # preserve me
   |     ^^^
help: Remove unnecessary `...`
   |
43 |     value: int
   -     ... # preserve me
44 +     # preserve me
45 |
   |
