crates/ruff_linter/src/rules/flake8_pyi/snapshots/ruff_linter__rules__flake8_pyi__tests__PYI018_PYI018.pyi.snap
---
source: crates/ruff_linter/src/rules/flake8_pyi/mod.rs
---
PYI018 [*] Private TypeVar `_T` is never used
 --> PYI018.pyi:6:1
  |
4 | from typing_extensions import ParamSpec, TypeVarTuple
5 |
6 | _T = typing.TypeVar("_T")
  | ^^
7 | _Ts = typing_extensions.TypeVarTuple("_Ts")
8 | _P = ParamSpec("_P")
help: Remove unused private TypeVar `_T`
  |
5 |
  - _T = typing.TypeVar("_T")
6 | _Ts = typing_extensions.TypeVarTuple("_Ts")
  |
note: This is an unsafe fix and may change runtime behavior

PYI018 [*] Private TypeVarTuple `_Ts` is never used
 --> PYI018.pyi:7:1
  |
6 | _T = typing.TypeVar("_T")
7 | _Ts = typing_extensions.TypeVarTuple("_Ts")
  | ^^^
8 | _P = ParamSpec("_P")
9 | _P2 = typing.ParamSpec("_P2")
help: Remove unused private TypeVarTuple `_Ts`
  |
6 | _T = typing.TypeVar("_T")
  - _Ts = typing_extensions.TypeVarTuple("_Ts")
7 | _P = ParamSpec("_P")
  |
note: This is an unsafe fix and may change runtime behavior

PYI018 [*] Private ParamSpec `_P` is never used
  --> PYI018.pyi:8:1
 6 | _T = typing.TypeVar("_T")
 7 | _Ts = typing_extensions.TypeVarTuple("_Ts")
 8 | _P = ParamSpec("_P")
   | ^^
 9 | _P2 = typing.ParamSpec("_P2")
10 | _Ts2 = TypeVarTuple("_Ts2")
help: Remove unused private ParamSpec `_P`
  |
7 | _Ts = typing_extensions.TypeVarTuple("_Ts")
  - _P = ParamSpec("_P")
8 | _P2 = typing.ParamSpec("_P2")
  |
note: This is an unsafe fix and may change runtime behavior

PYI018 [*] Private ParamSpec `_P2` is never used
  --> PYI018.pyi:9:1
 7 | _Ts = typing_extensions.TypeVarTuple("_Ts")
 8 | _P = ParamSpec("_P")
 9 | _P2 = typing.ParamSpec("_P2")
   | ^^^
10 | _Ts2 = TypeVarTuple("_Ts2")
help: Remove unused private ParamSpec `_P2`
  |
8 | _P = ParamSpec("_P")
  - _P2 = typing.ParamSpec("_P2")
9 | _Ts2 = TypeVarTuple("_Ts2")
  |
note: This is an unsafe fix and may change runtime behavior

PYI018 [*] Private TypeVarTuple `_Ts2` is never used
  --> PYI018.pyi:10:1
   |
 8 | _P = ParamSpec("_P")
 9 | _P2 = typing.ParamSpec("_P2")
10 | _Ts2 = TypeVarTuple("_Ts2")
   | ^^^^
11 |
12 | # OK
help: Remove unused private TypeVarTuple `_Ts2`
   |
9  | _P2 = typing.ParamSpec("_P2")
   - _Ts2 = TypeVarTuple("_Ts2")
10 |
   |
note: This is an unsafe fix and may change runtime behavior
